--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,8 +6,10 @@ cryptography==3.4.8
 defusedxml==0.7.1
 dj-rest-auth==2.1.11
 Django==3.2.6
+django-admin-ip-restrictor==2.2.0
 django-allauth==0.45.0
 django-cors-headers==3.8.0
+django-ipware==3.0.7
 django-rest-framework==0.1.0
 django-sslserver==0.22
 djangorestframework==3.12.4
