--- a/App/pubspec.yaml
+++ b/App/pubspec.yaml
@@ -88,6 +88,12 @@ flutter:
     - family: Roboto
       fonts:
         - asset: fonts/Roboto-Black.ttf  
+    - family: Poppins
+      fonts:
+        - asset: fonts/Poppins-Regular.ttf  
+    - family: PoppinsB
+      fonts:
+        - asset: fonts/Poppins-Medium.ttf  
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
