--- a/App/pubspec.yaml
+++ b/App/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   animated_splash_screen: ^1.1.0
   animated_text_kit: ^4.2.1
+  provider: ^6.0.1
 
 dev_dependencies:
   flutter_test:
