--- a/App/pubspec.yaml
+++ b/App/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   animated_splash_screen: ^1.1.0
   animated_text_kit: ^4.2.1
   provider: ^6.0.1
+  shared_preferences: ^2.0.8
 
 dev_dependencies:
   flutter_test:
