Revert to Add alert

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -9,7 +9,6 @@ ENV PYTHONUNBUFFERED=1
 
 # Install pip requirements
 COPY requirements.txt .
-RUN pip install gunicorn[gevent]
 RUN python -m pip install -r requirements.txt
 
 WORKDIR /app
@@ -21,6 +20,4 @@ RUN adduser -u 5678 --disabled-password --gecos "" appuser && chown -R appuser /
 USER root
 
 # During debugging, this entry point will be overridden. For more information, please refer to https://aka.ms/vscode-docker-python-debug
-#CMD ["sh", "run.sh"]
-#CMD ["python", "manage.py", "runserver"]
-CMD gunicorn --certfile=origin.pem --keyfile=key.pem --worker-class gevent --bind 0.0.0.0:6969 config.wsgi:application
+CMD ["sh", "run.sh"]
