--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,14 +1,15 @@
 asgiref==3.4.1
-certifi==2021.5.30
+certifi==2021.10.8
 cffi==1.14.6
-charset-normalizer==2.0.4
-cryptography==3.4.8
+charset-normalizer==2.0.6
+cryptography==35.0.0
 defusedxml==0.7.1
 dj-rest-auth==2.1.11
-Django==3.2.6
+Django==3.2.8
 django-admin-ip-restrictor==2.2.0
 django-allauth==0.45.0
-django-cors-headers==3.8.0
+django-cors-headers==3.10.0
+django-environ==0.7.0
 django-ipware==3.0.7
 django-rest-framework==0.1.0
 django-sslserver==0.22
@@ -20,14 +21,14 @@ oauthlib==3.1.1
 pyasn1==0.4.8
 pycparser==2.20
 pydantic==1.8.2
-PyJWT==2.1.0
+PyJWT==2.2.0
 python-jose==3.3.0
 python3-openid==3.2.0
-pytz==2021.1
+pytz==2021.3
 requests==2.26.0
 requests-oauthlib==1.3.0
 rsa==4.7.2
 six==1.16.0
-sqlparse==0.4.1
+sqlparse==0.4.2
 typing-extensions==3.10.0.0
-urllib3==1.26.6
+urllib3==1.26.7
